--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   
  .h1{
   font-weight: bolder;
-  color:purple;
+  color:white;
   font-size: xx-large;
   margin-top: 40px;
   background-color: black;
