--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .bg-img1 {
-    background: url(./images/IMG_080508_10624.jpeg);
+    background: url(./new/IMG-20231229-WA0000.jpg);
     background-repeat: no-repeat;
     height: 20vh;
     width: 100%;
